--- a/style.css
+++ b/style.css
@@ -174,3 +174,13 @@ body {
 #btn-next[style*="visibility: hidden"] {
     pointer-events: none;
 }
+.rating {
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+    filter: drop-shadow(0px 0px 5px rgba(255, 0, 0, 0.5)); /* Un petit halo rouge */
+    letter-spacing: 3px;
+}
+
+.card-content h3 {
+    margin-top: 5px; /* On ajuste l'espace avec le titre */
+}
