--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ html, body {
     text-align: center;
     font-weight: bold;
     text-transform: uppercase;
-    color: #fff;
-    text-shadow: 2px 2px 4px #000;
+    color: #000;
+    text-shadow: 2px 2px 4px #050505;
     white-space: nowrap;
     font-size: 0.8rem;
     pointer-events: none;
