--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* FOND ET BASE */
 html, body { 
-    background-color: #050505 !important; 
+    background-color: #DFAF2C !important; 
     color: white; 
     margin: 0; 
     padding: 0;
